Stop ignoring 4th positional argument to IO.#{foreach,readlines}

Fixes [Bug #18771]